--- a/public/assets/styles/partials/_structure.scss
+++ b/public/assets/styles/partials/_structure.scss
@@ -43,6 +43,22 @@
 		@include j-column(3/5);
     }
 }
+
+.introduction {
+	.content {
+		@include j-column(1);
+		@media #{$device-medium} {
+			@include j-column(2/3);
+			padding-right: 12%;
+    	}
+	}
+	.media {
+		@include j-column(1);
+		@media #{$device-medium} {
+			@include j-column(1/3);
+    	}
+	}
+}
 		
 .talents,
 .footer {
